--- a/mRemoteNG/app.config
+++ b/mRemoteNG/app.config
@@ -13,8 +13,11 @@
   <appSettings>
     <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="VaultUrl" value="" />
-    <add key="VaultHelpPage" value="" />
+      <add key="VaultUrl" value="vault url" /><!--https://my-vault.awesome:8200" /-->
+      <add key="VaultAuthType" value="kerberos" />
+      <add key="VaultHelpPage" value="https://help.page" />
+      <add key="VaultUriReplaceRegex" value="/ui/vault/secrets/([^/]+)/show/" />
+      <add key="VaultUriReplaceValue" value="/v1/$1/data/" />
 
   </appSettings>
   <log4net>
